<resources>
    <string name="app_name">Control Your Work</string>
    <string name="add_data">Добавить данные</string>
    <string name="reports">Отчёты</string>
    <string name="old_data">Устаревшие данные</string>
    <string name="employee_with_colon">Сотрудник:</string>
    <string name="pick_from_list_or_add_new">Выбери из списка или добавь нового</string>
    <string name="firm_with_colon">Фирма:</string>
    <string name="place_of_work_with_colon">Место работы:</string>
    <string name="type_of_work_with_colon">Тип работы:</string>
    <string name="date_with_colon">Дата:</string>
    <string name="result_with_colon">Результат:</string>
    <string name="result_type_with_colon">Тип результата:</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="cancel">Отмена</string>
    <string name="incorrect_data">Некорректные данные</string>
    <string name="hint_for_add_firm">Выбери из списка или добавь новую</string>
    <string name="hint_for_add_place_of_work">Выбери из списка или добавь новое</string>
    <string name="hint_for_type_of_work">Выбери из списка или добавь новый</string>
    <string name="hint_for_needless">Необязательное поле</string>
    <string name="list_of_employees">Список сотрудников</string>
    <string name="list_of_firms">Список фирм</string>
    <string name="list_of_places_of_work">Список мест работы</string>
    <string name="list_of_types_of_work">Список типов работы</string>
    <string name="list_of_types_of_result">Список типов результата</string>
    <string name="hint_for_search_criteria">Пустое поле - поиск среди всех записей</string>
    <string name="hint_for_search_criteria_one_date"> Выбери дату </string>
    <string name="hint_for_search_criteria_one_number"> Выбери число</string>
    <string name="hint_for_search_criteria_several_date"> Выбери одну или несколько дат </string>
    <string name="hint_for_insert_number_for_search_criteria">Введи значение</string>
    <string name="hint_for_result_of_search_criteria">Выбери нужную строку из таблицы</string>
    <string name="note_with_colon">Примечание:</string>
    <string name="title_activity_list_of_employers_">ListOfEmployers_Activity</string>
    <string name="employee_name_surname">ФИО сотруднка</string>
    <string name="firm_name">Название фирмы</string>
    <string name="type_of_work">Тип работы</string>
    <string name="type">Тип</string>
    <string name="result_type">Тип результата</string>
    <string name="place_of_work">Место работы</string>
    <string name="add">Добавить</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="hide">Скрыть</string>
    <string name="change">Изменить</string>
    <string name="ok">OK</string>
    <string name="select_all">Выбрать всё</string>
    <string name="clear">Очистить</string>
    <string name="search">Поиск</string>
    <string name="default_description">Описание по умолчанию</string>
    <string name="default_text">default_text</string>
    <string name="long_dash"> &#8212; </string>
    <string name="are_you_really_want_to_delete_them">Вы действительно хотите их удалить?</string>
    <string name="number">№</string>
    <string name="date">Дата</string>
    <string name="result">Результат</string>
    <string name="note">Примечание</string>
    <string name="criteria_for_select">Критерии для выборки</string>
    <string name="dates">Даты</string>
    <string name="results">Результаты</string>
    <string name="search_results">Результаты поиска</string>
    <string name="add_work_results">Добавьте результат работы</string>
    <string name="notes">Примечания</string>
    <string name="search_result">Результат поиска</string>
    <string name="changing_data">Изменение данных</string>
    <string name="selected_records_with_colon">Выбрано записей:</string>
    <string name="fail_attempt_about_delete_data_from_db">Не получилось удалить данные из БД. Покажи ошибку разработчику</string>
    <string name="errors_in_db_working">Ошибки в работе БД.</string>
    <string name="fail_attempt_about_delete__all_selected_data_from_db">Не получилось удалить из БД все выбранные элементы списка. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_load_data_from_result_table">Не удалось получить данные из таблицы ResultTable. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_load_data_from_primary_table">Не удалось получить данные из одной из первичных таблиц. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_update_data_in_result_table">Не удалось обновить данные в таблице. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_load_data_from_table">Не удалось загрузить данные из БД. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_write_data_to_table">Не удалось записать данные в БД. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_update_data_within_table">Не удалось обновить данные в БД. Покажи ошибку разработчику</string>
    <string name="fail_attempt_about_get_data_from_table">Не удалось получить данные из таблицы</string>
    <string name="tag_for_delete_data_fragment">deleteDataFragment tag</string>
    <string name="tag_for_edit_data_fragment">editDataFragment tag</string>
    <string name="tag_report_preview_fragment">reportPreViewFragment tag</string>
    <string name="tag_for_delete_data_from_result_table_fragment">deleteDataFromResultTableFragment tag</string>
    <string name="error_check_data_for_correct">Ошибка. Проверь корректность вводимых данных</string>
    <string name="adding_data_process_is_active">Идёт процесс добавления данных</string>
    <string name="tag_for_preview_for_report_fragment">preViewForReportFragment tag</string>
    <string name="search_criteria_for_monthly_report_fragment">searchCriteriaForMonthlyReportFragment tag</string>
    <string name="data_has_been_updated">Данные обновлены</string>
    <string name="data_has_been_added">Данные успешно добавлены</string>
    <string name="tag_for_list_of_DB_items_fragment">listDBItemsFragment tag</string>
    <string name="cannot_convert_string_to_date">Не получается конвертировать строку в дату. Покажи ошибку разработчику</string>
    <string name="thread_for_search_has_been_interrupted">Поток для поиска был прерван. Покажи ошибку разработчику</string>
    <string name="search_criteria_for_edit_delete_data">SELECT Result._id, Employer._id, Employer.fio, Firm._id, Firm.description, TypeOfWork._id, TypeOfWork.description, PlaceOfWork._id, PlaceOfWork.description, strftime(\"%d.%m.%Y\", Result.Date, \"unixepoch\") AS Date, Result.Value, Result.Note, Result.idResultType, ResultType.ResultType
        FROM Result JOIN Employer
        ON Result.IDEmployer=Employer._id
        JOIN Firm ON Firm._id=Result.IDFirm
        JOIN TypeOfWork ON TypeOfWork._id=Result.IDToW
        JOIN PlaceOfWork ON PlaceOfWork._id=Result.IDPoW
        LEFT JOIN ResultType ON Result.idResultType=ResultType._id</string>
    <string name = "order_by_for_report">ORDER BY Employer._id, TypeOfWork._id, PlaceOfWork._id, ResultType._id, Result.Date</string>
    <string name="search_criteria">Критерии поиска</string>
    <string name="search_criteria_for_report">Критерии поиска для отчёта</string>
    <string name="current_month">за текущий месяц</string>
    <string name="report_preview">Предпросмотр отчёта</string>
    <string name="current_year">за текущий год</string>
    <string name="certain_period">за указанный период</string>
    <string name="create_report">Создать отчёт</string>
    <string name="creating_file_error">Не получилось создать PDF-файл. Покажи ошибку разработчику:</string>
    <string name="writing_file_error">Не получилось записать данные в PDF-файл. Покажи ошибку разработчику:</string>
    <string name="the_report_has_been_created_successfully">Отчёт успешно создан</string>
    <string name="the_report_has_not_been_created">Ошибка при создании отчёта. Расскажи об этом разработчику</string>
    <string name="correct_data_check">Проверка корректности данных</string>
    <string name="incorrect_data_in_result_row">Некорректные данные в строке Результат</string>
    <string name="thread_for_check_data_was_interrupted">Поток на проверку данных был прерван. Покажи ошибку разработчику</string>
    <string name="common_sum_on_place_of_work">Общая сумма по месту работы:</string>
    <string name="common_sum_on_type_of_work">Общая сумма по типу работы:</string>
    <string name="total_sum_on_type_of_result_short">Итоговая сумма по типу рез-та:</string>
    <string name="total_sum_on_type_of_result_full">Итоговая сумма по типу результата:</string>
    <string name="incorrect_number_format">Некорректный формат чисел</string>
    <string name="second_value_must_be_over_than_first_one">Второе значение должно быть больше первого</string>
</resources>
